--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "@azure/core-client": "^1.7.2",
     "@azure/core-rest-pipeline": "^1.10.1",
-    "@azure/notification-hubs": "^1.0.0-beta.8",
+    "@azure/notification-hubs": "^1.0.1",
     "dotenv": "^16.0.3"
   }
 }
